# crewi-ai-code-generator

./: README.md  pyproject.toml
src/code_genereator/: __init__.py  crews.py  main.py  state.py
src/code_genereator/config/: engineering_agents.yaml  engineering_tasks.yaml  judge_agents.yaml  judge_tasks.yaml  planning_agents.yaml  planning_tasks.yaml
src/code_genereator/tools/: __init__.py  file_write_tool.py
